# s-enda-playground

./: .gitignore  CSW.postman_collection.json  README.md  cf_play.py  check.xml  csw_play.py  netcdf_play.py  ows_play.py  pyproject.toml  wfs_play.py  xsdata.xml  xsdata_gmd.xml  zarr_play.py
bindings/csw/: __init__.py  abstract_1.py  abstract_2.py  abstract_coordinate_operation_base_type.py  abstract_curve_segment_type.py  abstract_datum_base_type.py  abstract_feature_type.py  abstract_general_operation_parameter_ref_type.py  abstract_geometry_type.py  abstract_gmltype.py  abstract_meta_data.py  abstract_positional_accuracy_type.py  abstract_record_type.py  abstract_reference_system_type.py  abstract_ring_type.py  abstract_time_primitive_type.py  abstract_time_reference_system_type.py  abstract_topology_type.py  access_rights.py  acknowledgement.py  anchor_point.py  animate_color_2.py  animate_color_prototype.py  animate_motion_2.py  animate_motion_prototype.py  (+357 more)
catalog/: README.md  csw_play.py  dap_pull.py
collections/: CSW.postman_collection.json  WFS.postman_collection.json
docs/: Gemfile  _config.yml  about.md
hello-xarray/: cf_dataclasses.py  cf_write.py  cf_write_profile.py  cf_write_traj.py  cf_write_ts.py  dap_pull.py  read.py  test.nc  timeseries.nc  traj.nc  traj1.nc  traj2.nc  write_dataset.py  write_profile.py  write_traj.py  write_ts.py  zarr_play.py
nc/: cf_dump.py  ctd_dataclasses.py  netcdf_pull.py  sample.json  testnc.py  xarray_stuff.py
pycsw/: default.cfg  niva-default.cfg
xml/: barents.xml  check.xml  test_query.xml  transaction2.xml
(+3738 files in other folders)
