[tool.poetry]
name = "csw-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
ipykernel = "^6.3.1"
OWSLib = "^0.25.0"
lxml = "^4.6.3"
xsdata = {extras = ["lxml", "soap"], version = "^21.9"}
geopandas = "^0.9.0"
matplotlib = "^3.4.3"
pygeos = "^0.10.2"
netCDF4 = "^1.5.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
